final: complete project stabilization with hybrid room entities and restored group logic