@@ -1,94 +1,45 @@
 package kqlhotel.dao.room;
 
 import kqlhotel.dao.ConnectDB;
-import kqlhotel.entity.RoomType;
+import kqlhotel.dao.DAO_Interface;
 import kqlhotel.entity.Room;
+import kqlhotel.entity.RoomType;
 
-import java.sql.Connection;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.sql.Statement;
+import java.sql.*;
 import java.util.ArrayList;
 import java.util.List;
 
-public class RoomDAO {
+public class RoomDAO implements DAO_Interface<Room> {
+    private RoomTypeDAO roomTypeDAO = new RoomTypeDAO();
+
+    @Override
     public List<Room> getAll() {
         List<Room> list = new ArrayList<>();
-        String sql = "SELECT p.*, lp.tenLoaiPhong, lp.soLuongPhong, lp.giaPhong, lp.sucChuaToiDa, lp.dienTich, lp.moTa, lp.tienNghi " +
-                     "FROM Phong p JOIN LoaiPhong lp ON p.maLoaiPhong = lp.maLoaiPhong";
-
         try {
-            ConnectDB.getInstance().connect();
-        } catch (SQLException | ClassNotFoundException e) {
-            System.err.println("Lỗi kết nối database: " + e.getMessage());
-            return list;
-        }
+            Connection con = ConnectDB.getInstance().getConnection();
+            String sql = "SELECT maPhong, maLoaiPhong, tang, trangThaiPhong FROM Phong";
+            Statement stmt = con.createStatement();
+            ResultSet rs = stmt.executeQuery(sql);
 
-        Connection con = ConnectDB.getInstance().getConnection();
-        try (Statement stmt = con.createStatement();
-             ResultSet rs = stmt.executeQuery(sql)) {
             while (rs.next()) {
-                RoomType lp = new RoomType(
-                    rs.getString("maLoaiPhong"), // maLoaiPhong
-                    rs.getString("tenLoaiPhong"),
-                    rs.getInt("soLuongPhong"),
-                    rs.getDouble("giaPhong"),
-                    rs.getInt("sucChuaToiDa"),
-                    rs.getDouble("dienTich"),
-                    rs.getString("moTa"),
-                    rs.getString("tienNghi")
-                );
-
-                Room p = new Room(
-                    rs.getString("maPhong"),
-                    0.0, // Phong table doesn't have tienCoc
-                    lp,
-                    rs.getInt("tang"),
-                    rs.getString("trangThaiPhong")
-                );
-                list.add(p);
+                list.add(mapRoomWithDetails(rs));
             }
         } catch (SQLException e) {
-            System.err.println("Lỗi truy vấn Phong: " + e.getMessage());
             e.printStackTrace();
         }
         return list;
     }
 
+    @Override
     public Room getById(String id) {
-        String sql = "SELECT p.*, lp.tenLoaiPhong, lp.soLuongPhong, lp.giaPhong, lp.sucChuaToiDa, lp.dienTich, lp.moTa, lp.tienNghi " +
-                     "FROM Phong p JOIN LoaiPhong lp ON p.maLoaiPhong = lp.maLoaiPhong WHERE p.maPhong = ?";
         try {
-            ConnectDB.getInstance().connect();
-        } catch (SQLException | ClassNotFoundException e) {
-            return null;
-        }
-
-        Connection con = ConnectDB.getInstance().getConnection();
-        try (PreparedStatement pstmt = con.prepareStatement(sql)) {
+            Connection con = ConnectDB.getInstance().getConnection();
+            String sql = "SELECT maPhong, maLoaiPhong, tang, trangThaiPhong FROM Phong WHERE maPhong = ?";
+            PreparedStatement pstmt = con.prepareStatement(sql);
             pstmt.setString(1, id);
-            try (ResultSet rs = pstmt.executeQuery()) {
-                if (rs.next()) {
-                    RoomType lp = new RoomType(
-                        rs.getString("maLoaiPhong"),
-                        rs.getString("tenLoaiPhong"),
-                        rs.getInt("soLuongPhong"),
-                        rs.getDouble("giaPhong"),
-                        rs.getInt("sucChuaToiDa"),
-                        rs.getDouble("dienTich"),
-                        rs.getString("moTa"),
-                        rs.getString("tienNghi")
-                    );
-
-                    return new Room(
-                        rs.getString("maPhong"),
-                        0.0,
-                        lp,
-                        rs.getInt("tang"),
-                        rs.getString("trangThaiPhong")
-                    );
-                }
+            ResultSet rs = pstmt.executeQuery();
+            if (rs.next()) {
+                return mapRoomWithDetails(rs);
             }
         } catch (SQLException e) {
             e.printStackTrace();
@@ -96,120 +47,100 @@ public class RoomDAO {
         return null;
     }
 
-    public List<Room> search(String maPhong, String tenLoaiPhong, String trangThaiPhong) {
+    private Room mapRoomWithDetails(ResultSet rs) throws SQLException {
+        Room r = new Room();
+        r.setMaPhong(rs.getString("maPhong"));
+        r.setLoaiPhong(rs.getString("maLoaiPhong"));
+        r.setTang(rs.getInt("tang"));
+        r.setTrangThaiPhong(rs.getString("trangThaiPhong"));
+        
+        // Load RoomType object for Premium UI
+        RoomType rt = roomTypeDAO.getById(r.getLoaiPhong());
+        r.setRoomType(rt);
+        return r;
+    }
+
+    public List<Room> search(String roomId, String typeName, String status) {
         List<Room> list = new ArrayList<>();
         StringBuilder sql = new StringBuilder(
-            "SELECT p.*, lp.tenLoaiPhong, lp.soLuongPhong, lp.giaPhong, lp.sucChuaToiDa, lp.dienTich, lp.moTa, lp.tienNghi " +
-            "FROM Phong p JOIN LoaiPhong lp ON p.maLoaiPhong = lp.maLoaiPhong WHERE 1=1"
+            "SELECT p.* FROM Phong p JOIN LoaiPhong lp ON p.maLoaiPhong = lp.maLoaiPhong WHERE 1=1"
         );
+        if (roomId != null && !roomId.isBlank()) sql.append(" AND p.maPhong LIKE ?");
+        if (typeName != null && !typeName.isBlank()) sql.append(" AND lp.tenLoaiPhong LIKE ?");
+        if (status != null && !status.isBlank()) sql.append(" AND p.trangThaiPhong = ?");
 
-        if (maPhong != null && !maPhong.trim().isEmpty()) {
-            sql.append(" AND p.maPhong LIKE ?");
-        }
-        if (tenLoaiPhong != null && !tenLoaiPhong.trim().isEmpty() && !tenLoaiPhong.equals("Tất cả loại phòng")) {
-            sql.append(" AND lp.tenLoaiPhong = ?");
-        }
-        if (trangThaiPhong != null && !trangThaiPhong.trim().isEmpty() && !trangThaiPhong.equals("Tất cả trạng thái")) {
-            sql.append(" AND p.trangThaiPhong = ?");
-        }
+        try (Connection con = ConnectDB.getInstance().getConnection();
+             PreparedStatement ps = con.prepareStatement(sql.toString())) {
+            int idx = 1;
+            if (roomId != null && !roomId.isBlank()) ps.setString(idx++, "%" + roomId + "%");
+            if (typeName != null && !typeName.isBlank()) ps.setString(idx++, "%" + typeName + "%");
+            if (status != null && !status.isBlank()) ps.setString(idx++, status);
 
-        try {
-            ConnectDB.getInstance().connect();
-        } catch (SQLException | ClassNotFoundException e) {
-            return list;
-        }
-
-        Connection con = ConnectDB.getInstance().getConnection();
-        try (PreparedStatement pstmt = con.prepareStatement(sql.toString())) {
-             
-            int index = 1;
-            if (maPhong != null && !maPhong.trim().isEmpty()) {
-                pstmt.setString(index++, "%" + maPhong.trim() + "%");
-            }
-            if (tenLoaiPhong != null && !tenLoaiPhong.trim().isEmpty() && !tenLoaiPhong.equals("Tất cả loại phòng")) {
-                pstmt.setString(index++, tenLoaiPhong);
-            }
-            if (trangThaiPhong != null && !trangThaiPhong.trim().isEmpty() && !trangThaiPhong.equals("Tất cả trạng thái")) {
-                pstmt.setString(index++, trangThaiPhong);
-            }
-
-            try (ResultSet rs = pstmt.executeQuery()) {
-                while (rs.next()) {
-                    RoomType lp = new RoomType(
-                        rs.getString("maLoaiPhong"),
-                        rs.getString("tenLoaiPhong"),
-                        rs.getInt("soLuongPhong"),
-                        rs.getDouble("giaPhong"),
-                        rs.getInt("sucChuaToiDa"),
-                        rs.getDouble("dienTich"),
-                        rs.getString("moTa"),
-                        rs.getString("tienNghi")
-                    );
-
-                    Room p = new Room(
-                        rs.getString("maPhong"),
-                        0.0, // Phong table doesn't have tienCoc
-                        lp,
-                        rs.getInt("tang"),
-                        rs.getString("trangThaiPhong")
-                    );
-                    list.add(p);
-                }
+            ResultSet rs = ps.executeQuery();
+            while (rs.next()) {
+                list.add(mapRoomWithDetails(rs));
             }
         } catch (SQLException e) {
             e.printStackTrace();
         }
         return list;
     }
-    public boolean create(Room p) {
-        String sql = "INSERT INTO Phong (maPhong, maLoaiPhong, tang, trangThaiPhong) VALUES (?, ?, ?, ?)";
-        try {
-            ConnectDB.getInstance().connect();
-            Connection con = ConnectDB.getInstance().getConnection();
-            try (PreparedStatement pstmt = con.prepareStatement(sql)) {
-                pstmt.setString(1, p.getRoomId());
-                pstmt.setString(2, p.getRoomType().getRoomTypeId());
-                pstmt.setInt(3, p.getFloor());
-                pstmt.setString(4, p.getStatus());
-                return pstmt.executeUpdate() > 0;
-            }
-        } catch (SQLException | ClassNotFoundException e) {
-            e.printStackTrace();
-        }
-        return false;
-    }
 
-    public boolean update(Room p) {
-        String sql = "UPDATE Phong SET maLoaiPhong = ?, tang = ?, trangThaiPhong = ? WHERE maPhong = ?";
-        try {
-            ConnectDB.getInstance().connect();
-            Connection con = ConnectDB.getInstance().getConnection();
-            try (PreparedStatement pstmt = con.prepareStatement(sql)) {
-                pstmt.setString(1, p.getRoomType().getRoomTypeId());
-                pstmt.setInt(2, p.getFloor());
-                pstmt.setString(3, p.getStatus());
-                pstmt.setString(4, p.getRoomId());
-                return pstmt.executeUpdate() > 0;
-            }
-        } catch (SQLException | ClassNotFoundException e) {
-            e.printStackTrace();
-        }
-        return false;
-    }
-
-    public boolean updateStatus(String roomId, String status) {
+    public boolean updateStatus(String maPhong, String status) {
         String sql = "UPDATE Phong SET trangThaiPhong = ? WHERE maPhong = ?";
-        try {
-            ConnectDB.getInstance().connect();
-            Connection con = ConnectDB.getInstance().getConnection();
-            try (PreparedStatement pstmt = con.prepareStatement(sql)) {
-                pstmt.setString(1, status);
-                pstmt.setString(2, roomId);
-                return pstmt.executeUpdate() > 0;
-            }
-        } catch (SQLException | ClassNotFoundException e) {
+        try (Connection con = ConnectDB.getInstance().getConnection();
+             PreparedStatement ps = con.prepareStatement(sql)) {
+            ps.setString(1, status);
+            ps.setString(2, maPhong);
+            return ps.executeUpdate() > 0;
+        } catch (SQLException e) {
             e.printStackTrace();
+            return false;
         }
-        return false;
+    }
+
+    @Override
+    public boolean create(Room r) {
+        String sql = "INSERT INTO Phong (maPhong, maLoaiPhong, tang, trangThaiPhong) VALUES (?, ?, ?, ?)";
+        try (Connection con = ConnectDB.getInstance().getConnection();
+             PreparedStatement ps = con.prepareStatement(sql)) {
+            ps.setString(1, r.getMaPhong());
+            ps.setString(2, r.getLoaiPhong());
+            ps.setInt(3, r.getTang());
+            ps.setString(4, r.getTrangThaiPhong());
+            return ps.executeUpdate() > 0;
+        } catch (SQLException e) {
+            e.printStackTrace();
+            return false;
+        }
+    }
+
+    @Override
+    public boolean update(Room r) {
+        String sql = "UPDATE Phong SET maLoaiPhong = ?, tang = ?, trangThaiPhong = ? WHERE maPhong = ?";
+        try (Connection con = ConnectDB.getInstance().getConnection();
+             PreparedStatement ps = con.prepareStatement(sql)) {
+            ps.setString(1, r.getLoaiPhong());
+            ps.setInt(2, r.getTang());
+            ps.setString(3, r.getTrangThaiPhong());
+            ps.setString(4, r.getMaPhong());
+            return ps.executeUpdate() > 0;
+        } catch (SQLException e) {
+            e.printStackTrace();
+            return false;
+        }
+    }
+
+    @Override
+    public boolean delete(String id) {
+        String sql = "DELETE FROM Phong WHERE maPhong = ?";
+        try (Connection con = ConnectDB.getInstance().getConnection();
+             PreparedStatement ps = con.prepareStatement(sql)) {
+            ps.setString(1, id);
+            return ps.executeUpdate() > 0;
+        } catch (SQLException e) {
+            e.printStackTrace();
+            return false;
+        }
     }
 }
